appId: ${APP_ID}
env:
  Name: User
  EMAIL: user@test.com
  PASSWORD: password
---
- launchApp
- runFlow: ../utils/onboarding-and-login.yaml
- assertVisible: Today
- assertVisible:
    id: today-tab
- assertVisible:
    id: goals-tab
- tapOn:
    id: goals-tab
- assertVisible: Goals
- assertVisible:
    id: stats-tab
- tapOn:
    id: stats-tab
- assertVisible: Stats
- assertVisible:
    id: settings-tab
- tapOn:
    id: settings-tab
- assertVisible: Settings
- scroll
- assertVisible: Logout
